serverless-operator-examples/serverless-workflow-dataindex-use-cases/platforms/data_index_as_platform_service/03-data-index-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-index-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonataflow-platform-data-index-service
                port:
                  number: 80
